--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,9 @@
 tqdm
-datasets >= 1.8.0
-torch >= 1.3
+datasets
 transformers
-sentencepiece != 0.1.92
+sentencepiece
 accelerate
 tokenizers
-torch
 scipy
 sklearn
 matplotlib
